# openrct2-mcp

./: LICENSE  README.md  pyproject.toml  pytest.ini  ridecreation-api.js
skills/build-coaster/: SKILL.md
src/: api_client.py  mcp_server.py
src/tests/: __init__.py  test_api_client.py  test_mcp_server.py
